Add change repo name

--- a/index.html
+++ b/index.html
@@ -19,12 +19,30 @@
                 <img src="./img/logo.svg" alt="spotify">
             </div>
 
-            <div class="home">
-                <ul>
-                    <li class="evidence"><i class="fas fa-home"></i> Home</li>
-                    <li><i class="fas fa-search"></i> Cerca</li>
-                    <li><img src="./img/libreria.svg" alt=""> La tua libreria</li>
+            <div class="home mgt-font">
+                <ul class="ul-style">
+                    <li class="evidence mg-b"><i class="fas fa-home"></i> Home</li>
+                    <li class="mg-b"><i class="fas fa-search"></i> Cerca</li>
+                    <li class="mg-b"><img src="./img/libreria.svg" alt="library"> La tua libreria</li>
                 </ul>
+            </div>
+
+            <div class="playlist mgt-font">
+                <ul class="ul-style">
+                    <li class="evidence mg-b">PLAYLIST</li>
+                    <li class="mg-b"><i class="fas fa-plus-square ico"></i> Crea Playlist</li>
+                    <li class="mg-b">Nome Playlist</li>
+                    <li class="mg-b">Nome Playlist</li>
+                    <li class="mg-b">Nome Playlist</li>
+                    <li class="mg-b">Nome Playlist</li>
+                    <li class="mg-b">Nome Playlist</li>
+                    <li class="mg-b">Nome Playlist</li>
+                    <li>Nome Playlist</li>
+                </ul>
+            </div>
+
+            <div class="profile">
+                csgrtcsh
             </div>
         </aside>
     </section>
