--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
     <title>SpotifyWeb</title>
 </head>
 <body>
+
     <!--SIDEBAR-->
+
     <section class="sidebar">
         <aside>
             <div class="logo">
@@ -58,7 +60,21 @@
 
     <!--FOOTER-->
     <footer>
-        
+        <div class="left-player">
+            <ul>
+                <li><img src="./img/sinister.jpeg" alt="Sinister"> Sinister</li>
+            </ul>
+        </div>
+        <div class="center-player">
+            <ul>
+                <li></li>
+                <li><i class="fas fa-backward"></i></li>
+                <li><i class="far fa-play-circle"></i></li>
+                <li><i class="fas fa-forward"></i></li>
+                <li></li>
+            </ul>
+        </div>
+        <div class="right-player">kjvhnns</div>
     </footer>
     
 </body>
